--- a/trunk/CSharp/Wiki/WikiHelper/WikiHelper/WikiHelper.csproj
+++ b/trunk/CSharp/Wiki/WikiHelper/WikiHelper/WikiHelper.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{28D5D293-2391-4744-85CC-0983D9624438}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -6,9 +7,10 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>WikiHelper</RootNamespace>
     <AssemblyName>WikiHelper</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\enrico\Dati applicazioni\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -28,6 +30,8 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.PowerPoint" />
+    <Reference Include="office, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
@@ -49,60 +53,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="conf\app.config" />
-    <None Include="conf\data\replaces.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\extlib\ConfigEditor.cs" />
-    <Compile Include="src\extlib\CustomClass.cs" />
-    <Compile Include="src\extlib\DotNetWikiBot.cs" />
-    <Compile Include="src\extlib\HTML.cs" />
-    <Compile Include="src\extlib\HTMLTest.cs" />
-    <Compile Include="src\gui\AddressBookExport.cs" />
-    <Compile Include="src\gui\AddressBookExport.Designer.cs">
-      <DependentUpon>AddressBookExport.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\gui\CategoryExport.cs" />
-    <Compile Include="src\gui\CategoryExport.Designer.cs">
-      <DependentUpon>CategoryExport.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\gui\CreateForm.cs" />
-    <Compile Include="src\gui\CreateForm.Designer.cs">
-      <DependentUpon>CreateForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\gui\ReplaceForm.cs" />
-    <Compile Include="src\gui\ReplaceForm.Designer.cs">
-      <DependentUpon>ReplaceForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\gui\IExporter.cs" />
-    <Compile Include="src\gui\MainForm.cs" />
-    <Compile Include="src\gui\MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\gui\PageExport.cs" />
-    <Compile Include="src\gui\PageExport.Designer.cs">
-      <DependentUpon>PageExport.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\gui\WikiLoginForm.cs" />
-    <Compile Include="src\gui\WikiLoginForm.Designer.cs">
-      <DependentUpon>WikiLoginForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="src\lib\PowerPointHelper.cs" />
-    <Compile Include="src\lib\Contacts.cs" />
-    <Compile Include="src\lib\WikiMedia\converter\HTML2Model.cs" />
-    <Compile Include="src\lib\WikiMedia\converter\Model2PPT.cs" />
-    <Compile Include="src\lib\WikiMedia\WikiModel.cs" />
-    <Compile Include="src\lib\WikiMedia\WikiMedia.cs" />
-    <Compile Include="src\lib\WikiMedia\wikitext\WikiDocument.cs" />
-    <Compile Include="src\WikiTools.cs" />
-    <Compile Include="src\WikiConf.cs" />
-    <EmbeddedResource Include="src\extlib\ConfigEditor.resx">
-      <DependentUpon>ConfigEditor.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="src\extlib\CustomClass.resx">
-      <DependentUpon>CustomClass.cs</DependentUpon>
-    </EmbeddedResource>
+    <EmbeddedResource Include="src\extlib\Diff\BinaryResults.resx" />
+    <EmbeddedResource Include="src\extlib\Diff\Main.resx" />
+    <EmbeddedResource Include="src\extlib\Diff\Results.resx" />
     <EmbeddedResource Include="src\gui\AddressBookExport.resx">
       <DependentUpon>AddressBookExport.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,11 +71,84 @@
     <EmbeddedResource Include="src\gui\PageExport.resx">
       <DependentUpon>PageExport.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="src\gui\PageProcess.resx">
+      <DependentUpon>PageProcess.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\gui\ReplaceForm.resx">
       <DependentUpon>ReplaceForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\gui\WikiLoginForm.resx">
       <DependentUpon>WikiLoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="conf\app.config" />
+    <None Include="conf\data\replaces.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\extlib\ConfigEditor.cs" />
+    <Compile Include="src\extlib\CustomClass.cs" />
+    <Compile Include="src\extlib\DifferenceEngine\BinaryFile.cs" />
+    <Compile Include="src\extlib\DifferenceEngine\CharData.cs" />
+    <Compile Include="src\extlib\DifferenceEngine\DiffList_String.cs" />
+    <Compile Include="src\extlib\DifferenceEngine\Engine.cs" />
+    <Compile Include="src\extlib\DifferenceEngine\Structures.cs" />
+    <Compile Include="src\extlib\DifferenceEngine\TextFile.cs" />
+    <Compile Include="src\extlib\Diff\BinaryResults.cs" />
+    <Compile Include="src\extlib\Diff\DiffTextFile.cs" />
+    <Compile Include="src\extlib\Diff\Main.cs" />
+    <Compile Include="src\extlib\Diff\Results.cs" />
+    <Compile Include="src\extlib\DotNetWikiBot.cs" />
+    <Compile Include="src\extlib\HTML.cs" />
+    <Compile Include="src\extlib\HTMLTest.cs" />
+    <Compile Include="src\gui\AddressBookExport.cs" />
+    <Compile Include="src\gui\AddressBookExport.Designer.cs">
+      <DependentUpon>AddressBookExport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\CategoryExport.cs" />
+    <Compile Include="src\gui\CategoryExport.Designer.cs">
+      <DependentUpon>CategoryExport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\CreateForm.cs" />
+    <Compile Include="src\gui\CreateForm.Designer.cs">
+      <DependentUpon>CreateForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\IExporter.cs" />
+    <Compile Include="src\gui\MainForm.cs" />
+    <Compile Include="src\gui\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\PageExport.cs" />
+    <Compile Include="src\gui\PageExport.Designer.cs">
+      <DependentUpon>PageExport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\PageProcess.cs" />
+    <Compile Include="src\gui\PageProcess.Designer.cs">
+      <DependentUpon>PageProcess.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\ReplaceForm.cs" />
+    <Compile Include="src\gui\ReplaceForm.Designer.cs">
+      <DependentUpon>ReplaceForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\WikiLoginForm.cs" />
+    <Compile Include="src\gui\WikiLoginForm.Designer.cs">
+      <DependentUpon>WikiLoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\lib\PowerPointHelper.cs" />
+    <Compile Include="src\lib\Contacts.cs" />
+    <Compile Include="src\lib\WikiMedia\converter\HTML2Model.cs" />
+    <Compile Include="src\lib\WikiMedia\converter\Model2PPT.cs" />
+    <Compile Include="src\lib\WikiMedia\WikiModel.cs" />
+    <Compile Include="src\lib\WikiMedia\WikiMedia.cs" />
+    <Compile Include="src\lib\WikiMedia\wikitext\WikiDocument.cs" />
+    <Compile Include="src\lib\WikiMedia\wikitext\WikiProcessor.cs" />
+    <Compile Include="src\WikiTools.cs" />
+    <Compile Include="src\WikiConf.cs" />
+    <EmbeddedResource Include="src\extlib\ConfigEditor.resx">
+      <DependentUpon>ConfigEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\extlib\CustomClass.resx">
+      <DependentUpon>CustomClass.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="conf\data\newpages.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -144,26 +170,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="Office">
-      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>3</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-    </COMReference>
-    <COMReference Include="PowerPoint">
-      <Guid>{91493440-5A91-11CF-8700-00AA0060263B}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>8</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-    </COMReference>
     <Folder Include="conf" />
     <Folder Include="conf\data" />
     <Folder Include="conf\extractors" />
     <Folder Include="src" />
+    <Folder Include="src\extlib\Diff" />
+    <Folder Include="src\extlib\DifferenceEngine" />
     <Folder Include="src\gui" />
     <Folder Include="src\lib" />
     <Folder Include="src\extlib" />
